# qwen-img-edit-vs

./: BUILD  BUILD.bazel  Dockerfile  MODULE.bazel  WORKSPACE  app.py  compile.py  compile_model.py  download.py  handler.py  packaging.BUILD.tpl  requirements.txt  safetensors.BUILD.tpl
toolchains/: BUILD.bazel
