load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

_PY_DEPS = [
    "@rules_python++pip+pip_torch//:pkg",
    "@rules_python++pip+pip_torchvision//:pkg",
    "@rules_python++pip+pip_diffusers//:pkg",
    "@rules_python++pip+pip_transformers//:pkg",
    "@rules_python++pip+pip_accelerate//:pkg",
    "@rules_python++pip+pip_huggingface_hub//:pkg",
    "@rules_python++pip+pip_sentencepiece//:pkg",
    "@rules_python++pip+pip_safetensors//:pkg",  
    "@rules_python++pip+pip_packaging//:pkg",    
    "@rules_python++pip+pip_pyyaml//:pkg",
    "@rules_python++pip+pip_peft//:pkg",
    "@rules_python++pip+pip_gradio//:pkg",
    "@rules_python++pip+pip_runpod//:pkg",
    "@rules_python++pip+pip_pillow//:pkg",
    "@rules_python++pip+pip_spaces//:pkg",
    "@rules_python++pip+pip_dashscope//:pkg",
]

py_binary(
    name = "compile_model_bin",
    srcs = ["compile_model.py"],
    main = "compile_model.py",
    deps = _PY_DEPS,        
    python_version = "PY3",
)

genrule(
    name = "compiled_model",
    tools = [":compile_model_bin"],
    cmd = "$(location :compile_model_bin)",
    outs = ["compiled_pipe.pt"],
    tags = ["requires-gpu", "timeout=long"],
)

pkg_tar(
    name = "app_layer",
    srcs = glob([
        "handler.py",
        "optimization.py",
        "app.py",
        "README.md",
        "qwenimage/**/*.py",
    ]),
    package_dir = "/app",
)

pkg_tar(
    name = "model_layer",
    srcs = [":compiled_model"],
    package_dir = "/app",
)

oci_image(
    name = "qwen_image_server",
    base = "@runpod_base_image//image",
    entrypoint = ["/usr/bin/python3.11", "/app/handler.py"],
    tars = [
        ":app_layer",
        ":model_layer",
    ],
)

oci_push(
    name = "push_image",
    image = ":qwen_image_server",
    repository = "index.docker.io/$(DOCKER_USERNAME)/qwen-image-server-bazel",
    tags = ["latest"],
)