module(
    name = "qwen_image_server",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "runpod_base_image",
    image = "docker.io/runpod/pytorch",
    tag = "2.8.0-py3.11-cuda12.8.1-cudnn-devel-ubuntu22.04",
)
use_repo(oci, "runpod_base_image")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")


PACKAGING_BUILD_FILE_CONTENT = """
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "packaging",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
)
"""

pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
    whl_direct_overrides = {
        "packaging": {
            "build_content": PACKAGING_BUILD_FILE_CONTENT,
        },
    },
)
use_repo(pip, "pip")