module(
    name = "qwen_image_server",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")
bazel_dep(name = "rules_oci", version = "1.8.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "pip", version = "0.4.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "runpod_base_image",
    image = "docker.io/runpod/pytorch",
    tag = "2.8.0-py3.11-cuda12.8.1-cudnn-devel-ubuntu22.04",
)
use_repo(oci, "runpod_base_image")

use_repo_rule("@pip//:repo_rules.bzl", "pip_install")

pip_install(
    name = "pip_deps",
    requirements_lock = "//:requirements.txt",
    python_version = "3.11",
)